--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,11 @@ script:
   - ./shunit2_test.sh
   # TODO(kward): Reenable shellcheck after all scripts have been improved.
   #- bash -c 'shopt -s globstar; shellcheck shunit2 shunit2_test_helpers *.sh'
+
+addons:
+  apt:
+    sources:
+      - debian-sid
+    packages:
+      - ksh
+      - zsh
