--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,10 @@ env:
 
 script:
   - ./shunit2_test.sh
+
   # TODO(kward): Reenable shellcheck after all scripts have been improved.
   #- bash -c 'shopt -s globstar; shellcheck shunit2 shunit2_test_helpers *.sh'
-
+  - shellcheck gen_test_results.sh
 
 addons:
   apt:
