--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
 
   # TODO(kward): Reenable shellcheck after all scripts have been improved.
   #- bash -c 'shopt -s globstar; shellcheck shunit2 shunit2_test_helpers *.sh'
-  - shellcheck gen_test_results.sh shunit2
+  - shellcheck gen_test_results.sh shunit2 shunit2_test_asserts.sh
   - shellcheck -s sh shunit2_test_helpers
 
 addons:
