--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,7 @@ env:
 script:
   - ./shunit2_test.sh
 
-  # TODO(kward): Reenable shellcheck after all scripts have been improved.
-  #- bash -c 'shopt -s globstar; shellcheck shunit2 shunit2_test_helpers *.sh'
-  - shellcheck gen_test_results.sh shunit2 shunit2_test_asserts.sh shunit2_test_failures.sh shunit2_test_macros.sh shunit2_test_misc.sh shunit2_test_standalone.sh
+  - shellcheck gen_test_results.sh shunit2 shunit2_test_*.sh
   - shellcheck -s sh shunit2_test_helpers
 
 addons:
