--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,14 @@ addons:
 matrix:
   include:
     - os: linux
-      dist: bionic  # Support Ubuntu Bionic 18.04 through at least Apr 2023.
+      # Support Ubuntu Bionic 18.04 through at least Apr 2023.
+      dist: bionic
     - os: linux
-      dist: xenial  # Support Ubuntu Xenial 16.04 through at least Apr 2021.
+      # Support Ubuntu Xenial 16.04 through at least Apr 2021.
+      dist: xenial
     - os: linux
-      dist: trusty  # Support Ubuntu Trusty 14.04 through at least Apr 2019.
+      # Support Ubuntu Trusty 14.04 through at least Apr 2019.
+      dist: trusty
     - os: osx
     - os: linux
       script:
